# MetricProof

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  SPEC.md  findings.md  progress.md  pyproject.toml  task_plan.md  wq
.planning/: .active_plan
.planning/stage4a/: findings.md  progress.md  task_plan.md
.planning/stage4a/junction_target/: escaped.tex
.planning/stage4b1/: findings.md  progress.md  task_plan.md
.planning/stage4b2a/: baseline-log.md  design-decision.md  final-audit.md  findings-cli-config-audit.md  findings-doc-and-code-audit.md  findings-latex-audit.md  findings.md  progress.md  task_plan.md
docs/: claim-classification.md  data-model.md  example-workflow.md  html-report.md  linking-and-checking.md  rule-semantics.md  status.md
examples/mvp-demo/: README.md  run-demo.ps1  run-demo.sh
examples/mvp-demo/.metricproof/: claims.yml  config.yml
examples/mvp-demo/configs/: ablation.yml  baseline.yml  proposed.yml
examples/mvp-demo/paper/: main.tex
examples/mvp-demo/runs/: ablation.yml  proposed.yml  results.yml
src/metricproof/: __init__.py  __main__.py
src/metricproof/adapters/: __init__.py  config.py  (+10 more)
tests/: test_check_cli.py  test_check_diagnostics.py  test_claim_classification.py  test_claim_cli.py  test_claim_identity.py  test_claim_identity_boundaries.py  test_claim_matching.py  test_claim_registry_adapter.py  test_cli.py  test_config_adapter.py  test_core_rules.py  test_doctor_adapter.py  test_doctor_application.py  test_experiment_application.py  test_experiment_readers.py  test_experiments_cli.py  test_latex_scanner.py  test_latex_tables.py  test_link_cli.py  test_links_registry_domain.py  test_mvp_demo.py  test_numeric.py  test_package.py  test_paper_application.py  test_paper_domain.py  test_scan_cli.py  test_stage3_boundaries.py  test_stage4a_generated.py  test_stage4b1_generated.py  test_stage6.py  test_three_source_integration.py
(+44 files in other folders)
