[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metricproof"
dynamic = ["version"]
description = "Local-first consistency checks for experimental claims in research repositories."
readme = "README.md"
requires-python = ">=3.13,<4.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "MetricProof contributors" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "typer>=0.9,<1",
  "rich>=13,<15",
  "pydantic>=2,<3",
  "PyYAML>=6,<7",
  "Jinja2>=3.1,<4",
  "pylatexenc>=2.10,<3",
]

[project.optional-dependencies]
dev = [
  "build>=1,<2",
  "pyright>=1.1,<2",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]

[project.scripts]
metricproof = "metricproof.cli.main:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "metricproof.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["metricproof*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --cov-branch"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["metricproof"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = "error"
